# tetra-threads

./: .gitignore  package-lock.json  package.json  pyproject.toml
templates/: base.html  create.html  detail.html  index.html
threads/: admin.py  asgi.py  components.py  models.py  settings.py  urls.py  views.py  wsgi.py
threads/migrations/: 0001_initial.py  0002_rename_name_comment_text.py  0003_alter_comment_comment_parent_alter_comment_likes_and_more.py
